log
Thu 20 Apr 2023 04:34:47 PM UTC: 
 tests:  1|8
total_score: 0/70
8806fb3
Thu 20 Apr 2023 04:48:15 PM UTC: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
30e7f3d
Thu 20 Apr 2023 05:00:43 PM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  4|7
total_score: 5/70
f487900
Thu 20 Apr 2023 05:07:26 PM UTC: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  11|6
total_score: 15/70
fc9be34
Thu 20 Apr 2023 05:10:35 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|0
094b2ed
Thu 20 Apr 2023 05:16:15 PM UTC: 
 treemap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
1624868
Thu 20 Apr 2023 05:19:07 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|6
total_score: 15/70
d8d1b58
Thu 20 Apr 2023 05:20:30 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  10|6
total_score: 15/70
a9fd7b1
Thu 20 Apr 2023 05:21:53 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  10|6
total_score: 15/70
1ce008f
Thu 20 Apr 2023 05:26:02 PM UTC: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|6
total_score: 15/70
ad84d57
Thu 20 Apr 2023 05:26:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b0a2f07
Thu 20 Apr 2023 05:27:57 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
e573097
Thu 20 Apr 2023 05:29:12 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
8803cc5
Thu 20 Apr 2023 05:30:08 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
8a4a755
Thu 20 Apr 2023 05:33:16 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
bef0814
Thu 20 Apr 2023 05:34:41 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
d72e2bc
Sun 23 Apr 2023 02:33:23 AM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 15/70
7114afc
Sun 23 Apr 2023 02:48:42 AM UTC: 
 treemap.c | 30 ++++++++++--------------------
 1 file changed, 10 insertions(+), 20 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   51 |   if(tree->current == NULL)
      |   ^~
treemap.c:53:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   53 |     return;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ab6630b
Sun 23 Apr 2023 02:48:55 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 15/70
cdcf314
Sun 23 Apr 2023 02:49:13 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
07673e3
Sun 23 Apr 2023 02:49:37 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
26b92dc
Sun 23 Apr 2023 02:50:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c4327be
Sun 23 Apr 2023 02:51:38 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ab4c10e
Sun 23 Apr 2023 02:55:19 AM UTC: 
 treemap.c | 16 +++++++++-------
 1 file changed, 9 insertions(+), 7 deletions(-)
 tests:  14|5
total_score: 15/70
c447887
Sun 23 Apr 2023 02:56:11 AM UTC: 
 treemap.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  0|0
5a864d0
Sun 23 Apr 2023 02:57:03 AM UTC: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  15|4
total_score: 25/70
09f4ec6
Sun 23 Apr 2023 03:08:05 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
3c371ed
Sun 23 Apr 2023 03:14:02 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  17|3
total_score: 30/70
33d5cdd
Sun 23 Apr 2023 03:15:38 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  17|3
total_score: 30/70
a7e3e2b
Sun 23 Apr 2023 03:15:58 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|3
total_score: 30/70
ec3637a
Sun 23 Apr 2023 03:16:44 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
15be491
